# bundvm

./: Cargo.toml  README.md
examples/: answer.json  ptr_demo.json  register_lambda.json
examples/vm_shell_scripts/: dump_demo.vmshell  helloworld.vmshell  helloworld_from_shell.vmshell  ptr-demo.vmshell  register_lambda.vmshell
src/: main.rs
src/cmd/: bund_agent.rs  bund_feed.rs  bund_shell.rs  bund_vm.rs  mod.rs  setloglevel.rs
src/stdlib/: banner.rs  getfile.rs  mod.rs  string.rs  vm_execute.rs  vm_execute_json.rs  vm_feed.rs
src/vm/: mod.rs  vm_applicatives.rs  vm_call.rs  vm_callstack.rs  vm_error.rs  vm_lambda.rs  vm_push.rs  vm_route.rs
src/vm_json/: mod.rs  vm_json_bool.rs  vm_json_call.rs  vm_json_call_object.rs  vm_json_execute.rs  vm_json_lambda.rs  vm_json_list.rs  vm_json_numbers.rs  vm_json_ptr.rs  vm_json_route.rs  vm_json_separator.rs  vm_json_string.rs
src/vm_shell/: mod.rs  vm_shell_call.rs  vm_shell_core.rs  vm_shell_lambda.rs  vm_shell_pull.rs  vm_shell_push.rs  vm_shell_status.rs
src/vm_stdlib/: mod.rs  stdlib_execute.rs  stdlib_lambda.rs  stdlib_print.rs  stdlib_stack.rs  stdlib_terminate_and_execute.rs
