[package]
name = "bundvm"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.*", features = ["derive"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.12"
curl = "0.4.46"
env_logger = "0.11.3"
hostname = "0.3.1"
log = "0.4.21"
neofiglet = "0.1.1"
rust_dynamic = "0.18.0"
rust_twostack = "0.13.0"
rustyline = "10.0.0"
steel-interpreter = "0.5.0"
yansi = "0.5.1"
zenoh = "0.10.1-rc"
lazy_static = "1.4.0"
steel-core = "0.5.0"
comfy-table = "7.1.0"
easy-error = "1.0.0"
serve = "0.0.1"
serde_json = { version="1.0.*" }
serde = { version="1.0.*", default-features=true }
